--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 <section>
     <h2>স্বাগতম!</h2>
     <p>আমাদের দোকানে পাবেন নানান ধরনের মানসম্মত ব্যাগ, স্কুল ব্যাগ, ট্রাভেল ব্যাগ এবং আরো অনেক কিছু।</p>
-    <p>যোগাযোগ করুন: ০১৩২৬-১৬৯৬৫৮</p>
+    <p>যোগাযোগ করুন: ০১৩২৬-১৬৯৬৫৮</p><p>
+    <a href="https://www.facebook.com/profile.php?id=61575580235215&mibextid=ZbWKwL" target="_blank">
+        আমাদের ফেসবুক পেজে যান
+    </a>
+
 </section>
 
 <footer>
