--- a/index.html
+++ b/index.html
@@ -46,7 +46,19 @@
     <p>যোগাযোগ করুন: ০১৩২৬-১৬৯৬৫৮</p><p>
     <a href="https://www.facebook.com/profile.php?id=61575580235215&mibextid=ZbWKwL" target="_blank">
         আমাদের ফেসবুক পেজে যান
-    
+    <section style="text-align: center; margin: 30px;">
+  <h2 style="font-size: 28px; color: #333;">আমাদের ব্যাগ কালেকশন</h2>
+  <img src="https://i.ibb.co/4dtzyh1/bag-sample.jpg" alt="ব্যাগ" style="width:300px; border-radius: 10px;">
+  <p style="font-size: 20px; color: #555;">দাম: ৮৫০ টাকা</p>
+  
+  <form action="https://formspree.io/f/yourFormID" method="POST" style="margin-top: 20px;">
+    <input type="hidden" name="product" value="ব্যাগ - ৮৫০ টাকা">
+    <input type="text" name="name" placeholder="আপনার নাম লিখুন" required style="padding: 10px; width: 250px; margin: 5px;"><br>
+    <input type="text" name="phone" placeholder="আপনার মোবাইল নাম্বার" required style="padding: 10px; width: 250px; margin: 5px;"><br>
+    <textarea name="address" placeholder="আপনার ঠিকানা লিখুন" required style="padding: 10px; width: 250px; margin: 5px;"></textarea><br>
+    <button type="submit" style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;">অর্ডার করুন</button>
+  </form>
+</section>
   
 
 
