--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <p>যোগাযোগ করুন: ০১৩২৬-১৬৯৬৫৮</p><p>
     <a href="https://www.facebook.com/profile.php?id=61575580235215&mibextid=ZbWKwL" target="_blank">
         আমাদের ফেসবুক পেজে যান
-    <section style="text-align: center; margin: 30px;">
+    <<section style="text-align: center; margin: 30px;">
   <h2 style="font-size: 28px; color: #333;">আমাদের ব্যাগ কালেকশন</h2>
-  <img src="https://i.ibb.co/4dtzyh1/bag-sample.jpg" alt="ব্যাগ" style="width:300px; border-radius: 10px;">
+  <img src="https://i.ibb.co/3RZcMdw/bag.jpg" alt="ব্যাগ" style="width:300px; border-radius: 10px;">
   <p style="font-size: 20px; color: #555;">দাম: ৮৫০ টাকা</p>
   
   <form action="https://formspree.io/f/yourFormID" method="POST" style="margin-top: 20px;">
