--- a/index.html
+++ b/index.html
@@ -46,24 +46,34 @@
     <p>যোগাযোগ করুন: ০১৩২৬-১৬৯৬৫৮</p><p>
     <a href="https://www.facebook.com/profile.php?id=61575580235215&mibextid=ZbWKwL" target="_blank">
         আমাদের ফেসবুক পেজে যান
-    <<section style="text-align: center; margin: 30px;">
-  <h2 style="font-size: 28px; color: #333;">আমাদের ব্যাগ কালেকশন</h2>
-  <img src="https://i.ibb.co/3RZcMdw/bag.jpg" alt="ব্যাগ" style="width:300px; border-radius: 10px;">
-  <p style="font-size: 20px; color: #555;">দাম: ৮৫০ টাকা</p>
-  
-  <form action="https://formspree.io/f/yourFormID" method="POST" style="margin-top: 20px;">
-    <input type="hidden" name="product" value="ব্যাগ - ৮৫০ টাকা">
-    <input type="text" name="name" placeholder="আপনার নাম লিখুন" required style="padding: 10px; width: 250px; margin: 5px;"><br>
-    <input type="text" name="phone" placeholder="আপনার মোবাইল নাম্বার" required style="padding: 10px; width: 250px; margin: 5px;"><br>
-    <textarea name="address" placeholder="আপনার ঠিকানা লিখুন" required style="padding: 10px; width: 250px; margin: 5px;"></textarea><br>
-    <button type="submit" style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px;">অর্ডার করুন</button>
-  </form>
-</section>
-  
+    <<<h2>Model 23 - Ladies Bag</h2>
+<p><strong>দাম:</strong> ৮৫০ টাকা</p>
+<p><strong>স্টক:</strong> ১০০ পিস</p>
+<p><strong>বর্ণনা:</strong> স্টাইলিশ এবং টেকসই 'Model 23' লেডিজ ব্যাগ। দৈনন্দিন ব্যবহারের জন্য একেবারে পারফেক্ট। অফিস, কলেজ ও পার্টির জন্য আদর্শ।</p>
 
+<h3>অর্ডার করুন</h3>
+<form action="your-order-submit-link" method="POST">
+  <label for="name">নাম:</label><br>
+  <input type="text" id="name" name="name" required><br><br>
 
-</section>
+  <label for="phone">মোবাইল নাম্বার:</label><br>
+  <input type="tel" id="phone" name="phone" required><br><br>
 
+  <label for="address">ঠিকানা:</label><br>
+  <textarea id="address" name="address" rows="4" required></textarea><br><br>
+
+  <label for="quantity">কত পিস নিবেন:</label><br>
+  <input type="number" id="quantity" name="quantity" min="1" required><br><br>
+
+  <label for="payment">পেমেন্ট পদ্ধতি:</label><br>
+  <select id="payment" name="payment" required>
+    <option value="cod">ক্যাশ অন ডেলিভারি</option>
+    <option value="bkash">বিকাশ</option>
+    <option value="nagad">নগদ</option>
+  </select><br><br>
+
+  <button type="submit">অর্ডার সাবমিট করুন</button>
+</form>
 <footer>
     &copy; ২০২৫ শাহিন ব্যাগ হাউজ
 </footer>
