--- a/index.html
+++ b/index.html
@@ -46,35 +46,65 @@
     <p>যোগাযোগ করুন: ০১৩২৬-১৬৯৬৫৮</p><p>
     <a href="https://www.facebook.com/profile.php?id=61575580235215&mibextid=ZbWKwL" target="_blank">
         আমাদের ফেসবুক পেজে যান
-    <<<h2>Model 23 - Ladies Bag</h2>
-<p><strong>দাম:</strong> ৮৫০ টাকা</p>
-<p><strong>স্টক:</strong> ১০০ পিস</p>
-<p><strong>বর্ণনা:</strong> স্টাইলিশ এবং টেকসই 'Model 23' লেডিজ ব্যাগ। দৈনন্দিন ব্যবহারের জন্য একেবারে পারফেক্ট। অফিস, কলেজ ও পার্টির জন্য আদর্শ।</p>
+        <!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <title>Shahin Bag House</title>
+    <style>
+        body {
+            background: linear-gradient(to right, #d4fc79, #96e6a1);
+            font-family: 'Noto Sans Bengali', sans-serif;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+            max-width: 600px;
+            margin: auto;
+        }
+        h1 {
+            color: #0a9396;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 20px;
+            color: #333;
+            margin: 5px 0;
+        }
+        a {
+            color: #0077b6;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        img {
+            margin-top: 20px;
+            width: 300px;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
 
-<h3>অর্ডার করুন</h3>
-<form action="your-order-submit-link" method="POST">
-  <label for="name">নাম:</label><br>
-  <input type="text" id="name" name="name" required><br><br>
+<div class="container">
+    <h1>Shahin Bag House</h1>
+    <p>ঠিকানা: চৌধুরী মার্কেট, ফুলবাড়িয়া, ময়মনসিংহ</p>
+    <p>মোবাইল: <a href="tel:01326169658">01326-169658</a></p>
+    <p>ফেসবুক: <a href="https://www.facebook.com/share/1BYXdqc2aJ/" target="_blank">আমাদের ফেসবুক পেজ</a></p>
+    <p>ওয়েবসাইট: <a href="https://shaninbaghouse.github.io/shahinbaghouse2/" target="_blank">আমাদের ওয়েবসাইট</a></p>
 
-  <label for="phone">মোবাইল নাম্বার:</label><br>
-  <input type="tel" id="phone" name="phone" required><br><br>
+    <img src="shahinbaghouse_logo_with_qr.png" alt="Shahin Bag House QR Code">
+</div>
 
-  <label for="address">ঠিকানা:</label><br>
-  <textarea id="address" name="address" rows="4" required></textarea><br><br>
-
-  <label for="quantity">কত পিস নিবেন:</label><br>
-  <input type="number" id="quantity" name="quantity" min="1" required><br><br>
-
-  <label for="payment">পেমেন্ট পদ্ধতি:</label><br>
-  <select id="payment" name="payment" required>
-    <option value="cod">ক্যাশ অন ডেলিভারি</option>
-    <option value="bkash">বিকাশ</option>
-    <option value="nagad">নগদ</option>
-  </select><br><br>
-
-  <button type="submit">অর্ডার সাবমিট করুন</button>
-</form>
-<footer>
+</body>
+</html>
     &copy; ২০২৫ শাহিন ব্যাগ হাউজ
 </footer>
 
