--- a/index.html
+++ b/index.html
@@ -69,7 +69,85 @@
     <p><a href="https://www.facebook.com/share/1BYXdqc2aJ/" target="_blank">ফেসবুক পেজ</a></p>
     <p><a href="https://shaninbaghouse.github.io/shahinbaghouse2/" target="_blank">ওয়েবসাইট</a></p>
 
-    https://wa.me/8801326169658
+    <!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shahin Bag House</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap');
+
+        body {
+            background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+            font-family: 'Noto Sans Bengali', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+        .card {
+            background: #ffffff;
+            padding: 30px 20px;
+            border-radius: 20px;
+            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            max-width: 500px;
+            width: 90%;
+        }
+        .card h1 {
+            font-size: 36px;
+            color: #0077b6;
+            margin-bottom: 10px;
+        }
+        .card p {
+            font-size: 18px;
+            color: #333;
+            margin: 8px 0;
+        }
+        .card a {
+            display: inline-block;
+            margin: 5px 0;
+            color: #0a9396;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 18px;
+        }
+        .card a:hover {
+            text-decoration: underline;
+        }
+        .qr-code {
+            margin-top: 20px;
+        }
+        .qr-code img {
+            width: 300px;
+            height: auto;
+            border: 2px solid #0077b6;
+            border-radius: 10px;
+            padding: 10px;
+            background: #ffffff;
+        }
+    </style>
+</head>
+<body>
+
+<div class="card">
+    <h1>Shahin Bag House</h1>
+    <p>ঠিকানা: চৌধুরী মার্কেট, ফুলবাড়িয়া, ময়মনসিংহ</p>
+    <p>মোবাইল: <a href="tel:01326169658">01326-169658</a></p>
+    <p><a href="https://www.facebook.com/share/1BYXdqc2aJ/" target="_blank">ফেসবুক পেজ</a></p>
+    <p><a href="https://shaninbaghouse.github.io/shahinbaghouse2/" target="_blank">ওয়েবসাইট</a></p>
+    <p><a href="https://wa.me/8801326169658" target="_blank">WhatsApp এ যোগাযোগ করুন</a></p>
+
+    <div class="qr-code">
+        <img src="shahinbaghouse_logo_with_qr.png" alt="Shahin Bag House QR Code">
+    </div>
+</div>
+
+</body>
+</html>
     </div>
 </div>
 
