--- a/index.html
+++ b/index.html
@@ -8,147 +8,135 @@
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap');
 
         body {
-            background: linear-gradient(to right, #fbc2eb, #a6c1ee);
-            font-family: 'Noto Sans Bengali', sans-serif;
             margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
+            font-family: 'Noto Sans Bengali', sans-serif;
+            background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+            overflow-x: hidden;
         }
-        .card {
-            background: #ffffff;
-            padding: 30px 20px;
-            border-radius: 20px;
-            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+        .container {
+            padding: 30px;
+            animation: fadeInUp 1s ease forwards;
+        }
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        header {
             text-align: center;
-            max-width: 500px;
-            width: 90%;
+            padding: 20px 0;
         }
-        .card h1 {
-            font-size: 36px;
+        header h1 {
+            font-size: 40px;
             color: #0077b6;
-            margin-bottom: 10px;
         }
-        .card p {
+        .description {
+            text-align: center;
+            margin-bottom: 30px;
             font-size: 18px;
             color: #333;
-            margin: 8px 0;
         }
-        .card a {
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+        .product {
+            background: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            overflow: hidden;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+        .product:hover {
+            transform: translateY(-5px);
+        }
+        .product img {
+            width: 100%;
+            height: 220px;
+            object-fit: cover;
+        }
+        .product h3 {
+            margin: 10px 0 5px;
+            color: #023047;
+        }
+        .product p {
+            color: #555;
+            font-size: 16px;
+            margin-bottom: 15px;
+        }
+        .contact-links {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .contact-links a {
             display: inline-block;
-            margin: 5px 0;
-            color: #0a9396;
+            margin: 8px;
+            padding: 12px 20px;
+            background: #0077b6;
+            color: white;
             text-decoration: none;
+            border-radius: 8px;
             font-weight: bold;
-            font-size: 18px;
+            transition: background 0.3s;
         }
-        .card a:hover {
-            text-decoration: underline;
+        .contact-links a:hover {
+            background: #005f87;
         }
-        .qr-code {
-            margin-top: 20px;
-        }
-        .qr-code img {
-            width: 300px;
-            height: auto;
-            border: 2px solid #0077b6;
-            border-radius: 10px;
-            padding: 10px;
-            background: #ffffff;
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            font-size: 14px;
+            color: #555;
         }
     </style>
 </head>
 <body>
 
-<div class="card">
-    <h1>Shahin Bag House</h1>
-    <p>ঠিকানা: চৌধুরী মার্কেট, ফুলবাড়িয়া, ময়মনসিংহ</p>
-    <p>মোবাইল: <a href="tel:01326169658">01326-169658</a></p>
-    <p><a href="https://www.facebook.com/share/1BYXdqc2aJ/" target="_blank">ফেসবুক পেজ</a></p>
-    <p><a href="https://shaninbaghouse.github.io/shahinbaghouse2/" target="_blank">ওয়েবসাইট</a></p>
+<div class="container">
+    <header>
+        <h1>Shahin Bag House</h1>
+    </header>
 
-    <!DOCTYPE html>
-<html lang="bn">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shahin Bag House</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap');
-
-        body {
-            background: linear-gradient(to right, #fbc2eb, #a6c1ee);
-            font-family: 'Noto Sans Bengali', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-        }
-        .card {
-            background: #ffffff;
-            padding: 30px 20px;
-            border-radius: 20px;
-            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            max-width: 500px;
-            width: 90%;
-        }
-        .card h1 {
-            font-size: 36px;
-            color: #0077b6;
-            margin-bottom: 10px;
-        }
-        .card p {
-            font-size: 18px;
-            color: #333;
-            margin: 8px 0;
-        }
-        .card a {
-            display: inline-block;
-            margin: 5px 0;
-            color: #0a9396;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-        }
-        .card a:hover {
-            text-decoration: underline;
-        }
-        .qr-code {
-            margin-top: 20px;
-        }
-        .qr-code img {
-            width: 300px;
-            height: auto;
-            border: 2px solid #0077b6;
-            border-radius: 10px;
-            padding: 10px;
-            background: #ffffff;
-        }
-    </style>
-</head>
-<body>
-
-<div class="card">
-    <h1>Shahin Bag House</h1>
-    <p>ঠিকানা: চৌধুরী মার্কেট, ফুলবাড়িয়া, ময়মনসিংহ</p>
-    <p>মোবাইল: <a href="tel:01326169658">01326-169658</a></p>
-    <p><a href="https://www.facebook.com/share/1BYXdqc2aJ/" target="_blank">ফেসবুক পেজ</a></p>
-    <p><a href="https://shaninbaghouse.github.io/shahinbaghouse2/" target="_blank">ওয়েবসাইট</a></p>
-    <p><a href="https://wa.me/8801326169658" target="_blank">WhatsApp এ যোগাযোগ করুন</a></p>
-
-    <div class="qr-code">
-        <img src="shahinbaghouse_logo_with_qr.png" alt="Shahin Bag House QR Code">
+    <div class="description">
+        চৌধুরী মার্কেট, ফুলবাড়িয়া, ময়মনসিংহ<br>
+        সকল প্রকার ব্যাগ, রেনকোট, ছাতা পাওয়া যায়
     </div>
-</div>
 
-</body>
-</html>
+    <div class="products">
+        <div class="product">
+            <img src="https://i.ibb.co/XsZ4Y8B/bag-sample.jpg" alt="লেডিজ ব্যাগ">
+            <h3>লেডিজ ব্যাগ</h3>
+            <p>৳১২০০ মাত্র</p>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co/7rp0P0m/umbrella-sample.jpg" alt="ছাতা">
+            <h3>ছাতা</h3>
+            <p>৳৬০০ মাত্র</p>
+        </div>
+        <div class="product">
+            <img src="https://i.ibb.co/y6Z5C5T/raincoat-sample.jpg" alt="রেনকোট">
+            <h3>রেনকোট</h3>
+            <p>৳৮০০ মাত্র</p>
+        </div>
     </div>
+
+    <div class="contact-links">
+        <a href="tel:01326169658">কল করুন</a>
+        <a href="https://wa.me/8801326169658" target="_blank">WhatsApp এ চ্যাট করুন</a>
+        <a href="https://www.facebook.com/share/1BYXdqc2aJ/" target="_blank">ফেসবুক পেজ</a>
+    </div>
+
+    <footer>
+        &copy; 2025 Shahin Bag House. সকল অধিকার সংরক্ষিত।
+    </footer>
 </div>
 
 </body>
