--- a/index.html
+++ b/index.html
@@ -102,7 +102,36 @@
         <p><i class="fab fa-facebook"></i> <a href="https://www.facebook.com/share/1BNYUJcdFq/" style="color: #0275d8;" target="_blank">আমাদের ফেসবুক পেজ</a></p>
     </div>
 </section>
+<!-- WhatsApp Floating Button -->
+<a href="https://wa.me/8801326169658" class="whatsapp-button" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
 
+<!-- CSS for WhatsApp Button -->
+<style>
+    .whatsapp-button {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #25D366;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        padding: 15px;
+        font-size: 25px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+        cursor: pointer;
+        z-index: 1000;
+        text-align: center;
+        text-decoration: none;
+    }
+    .whatsapp-button:hover {
+        background-color: #128C7E;
+    }
+</style>
+
+<!-- Font Awesome Icon Link (For WhatsApp Icon) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <footer>
     <p>© 2025 Shahin Bag House | সর্বস্বত্ব সংরক্ষিত</p>
 </footer>
