--- a/index.html
+++ b/index.html
@@ -133,6 +133,25 @@
 <!-- Font Awesome Icon Link (For WhatsApp Icon) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <footer>
+    <!-- ========== Google Map Section Start ========== -->
+<section style="padding: 40px 20px; background: #f9f9f9; animation: slideUp 1s ease;">
+    <h2 style="text-align:center; color:#222; margin-bottom:20px;">আমাদের অবস্থান</h2>
+    <div style="max-width:800px; margin:auto;">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.235904445612!2d90.40334777598263!3d23.80933707863024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c43cc2742351%3A0xa54bc6812a443d57!2sChowdhury%20Market%2C%20Mymensingh!5e0!3m2!1sen!2sbd!4v1714230483821!5m2!1sen!2sbd" 
+            width="100%" height="300" style="border:0; border-radius:8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+</section>
+<!-- ========== Google Map Section End ========== -->
+
+<!-- Animation Keyframes -->
+<style>
+@keyframes slideUp {
+    from { transform: translateY(50px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+}
+</style>
     <p>© 2025 Shahin Bag House | সর্বস্বত্ব সংরক্ষিত</p>
 </footer>
 
