--- a/index.html
+++ b/index.html
@@ -151,12 +151,7 @@
     from { transform: translateY(50px); opacity: 0; }
     to { transform: translateY(0); opacity: 1; }
 }
-</style>
-    <!-- ========== Shop Image Section Start ========== -->
-<section style="padding: 40px 20px; background: #ffffff; text-align: center;">
-    <h2 style="color:#222; margin-bottom:20px;">আমাদের দোকান দেখুন</h2>
-    <img src="YOUR_IMAGE_PATH_HERE" alt="Shahin Bag House" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-</section>
+</style
 <!-- ========== Shop Image Section End ========== -->
     <p>© 2025 Shahin Bag House | সর্বস্বত্ব সংরক্ষিত</p>
 </footer>
