--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
   <p>Chowdhury Market, Fulbaria, Mymensingh</p>  <img src="IMG_20250425_130746.jpg" alt="Bag Shop">  <br>
   <a href="#" class="button">Visit Our Shop</a></body>
 </html>
+        <img src="IMG_20250425_130746.jpg" alt="Bag Image" style="max-width: 100%; height: auto;">
 <!-- ========== Shop Image Section End ========== -->
     <p>© 2025 Shahin Bag House | সর্বস্বত্ব সংরক্ষিত</p>
 </footer>
