--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 </html>
         <img src="IMG_20250425_130746.jpg" alt="Bag Image" style="max-width: 100%; height: auto;">
 <!-- ========== Shop Image Section End ========== -->
+        <img src="IMG_20250425_130746.jpg" alt="Bag Image" style="max-width: 100%; height: auto;">
     <p>© 2025 Shahin Bag House | সর্বস্বত্ব সংরক্ষিত</p>
 </footer>
 
