--- a/index.html
+++ b/index.html
@@ -183,13 +183,8 @@
     }
   </style>
 </head>
-<body>  <h1>Shahin Bag House</h1>
-  <p>Chowdhury Market, Fulbaria, Mymensingh</p>  <img src="IMG_20250425_130746.jpg" alt="Bag Shop">  <br>
-  <a href="#" class="button">Visit Our Shop</a></body>
-</html>
-        <img src="IMG_20250425_130746.jpg" alt="Bag Image" style="max-width: 100%; height: auto;">
-<!-- ========== Shop Image Section End ========== -->
-        <img src="IMG_20250425_130746.jpg" alt="Bag Image" style="max-width: 100%; height: auto;">
+<body>  <h1>Shahin Bag House</h1>========== -->
+
     <p>© 2025 Shahin Bag House | সর্বস্বত্ব সংরক্ষিত</p>
 </footer>
 
